# plugin-pySys

./: .gitignore  README.md  add_apply_sort.py  debug_media_library.py  enable_full_version.py  filter_panel_methods.py  fix_dashboard.py  fix_dashboard_and_run.py  fix_enhanced_media_library.py  fix_media_library.py  fix_mini_player.py  fix_table_view.py  fix_table_view_improved.py  pyproject.toml  smart_playlists.json  start_full_version.bat  test_card_view.py  test_enhanced_widget.py  test_enhanced_widget_full.py  test_media_library_complete.py  test_media_library_direct.py  test_media_library_minimal.py  test_plugin_integration.py
.github/: copilot-instructions.md
docs/: audio-tools-plan.md  filesystem-watcher.md  logging-system.md  media-library-enrichment.md  media-library-ux-refactor.md  metadata-engine.md  metadata-enrichment.md  plugin-concepts.md  smart-playlists-phase3.md  system-tools-plan.md
scripts/: build.py  diag_media_library_plugin.py
tests/: test_audio_device_service.py  test_audio_recording.py  test_audio_tools_plugin.py  test_backup.py  test_backup_dry_run.py  test_backup_scheduler.py  test_batch_queue.py  test_config_store.py  test_covers.py  test_dashboard_state.py  test_dashboard_stats_safe.py  test_data_compression.py  test_disk_monitor.py  test_duplicate_scanner.py  test_enrichment_cache.py  test_enrichment_manager.py  test_equalizer.py  test_events.py  test_explorer_filters.py  test_explorer_plugin.py  test_explorer_search.py  test_image_compression.py  test_library_index_attributes.py  test_library_index_playlist.py  test_library_stats.py  (+16 more)
(+103 files in other folders)
