[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmst"
version = "0.1.0"
description = "Modulares Medien- & System-Toolkit"
authors = [{name = "MMST Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7",
    "watchdog>=4.0",
    "typing-extensions>=4.12",
    "send2trash>=1.8",
    "mutagen>=1.47",
    "numpy>=1.26",
    "scipy>=1.11",
    "sounddevice>=0.4",
    "pymediainfo>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[project.scripts]
mmst = "mmst.core.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
